--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,6 +30,7 @@ jobs:
         python -m pip install flake8 pytest
         python -m pip install nltk
         python -m pip install vaderSentiment
+        python -m pip install canvasapi
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
